--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,38 @@
     <artifactId>commons-io</artifactId>
     <version>2.15.0</version>
 </dependency>
-
-
- 
   </dependencies>
+  
+  <build>
+  
+   <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      
+       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.2</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+      
+      
+    </plugins>
+    
+    
+  
+  </build>
+  
   
 </project>
